# k8s-aws

./: .gitignore  LICENSE  README-en.md  README.md  locals.tf  main.tf  outputs.tf  terraform.tfvars  varables.tf  variables.tf  vpc.tf
.github/workflows/: deploy-production.yml  deploy-staging.yml  docker-build-test.yml  mcp-server-deploy.yml  slack-production.yml  slack-staging.yml
README/: README-vars-en.md  README-vars-kr.md  README-worker-en.md  README-worker-kr.md
mcp/: .dockerignore  Dockerfile  README-en.md  README.md  fastmcp_server.py  main.py  pyproject.toml
mcp/tools/aws/: ec2.py
mcp/tools/kubernetes/: advanced.py  deployments.py  helpers.py  monitoring.py  pods.py
mcp/utils/: logger.py
mcp/workflows/: slack_approval.py  slack_server.py
script/: README-en.md  README.md  combined_settings.sh  ssh_time.sh  system_settings.sh  worker_setup.sh
